--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
         <title>env_swap</title>
         <link rel='stylesheet' href='style.css' />
+        <script src="shapes.js"></script>
         <script src="script.js"></script>
         <script src="levels.js"></script>
         <meta charset="utf-8">
     </head>
-    <body onload="init()">
+    <body>
         <audio id="clearsound" src="sound/pop.ogg" preload="auto"></audio>
         <canvas id="canvas"></canvas>
         <button id="playbutton" onclick="playButtonClicked();">Play</button>
